--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require"    : {
         "php"                : ">=7.1.0",
         "ext-json"           : ">=1.2",
-        "topthink/framework" : "v5.2.*-dev",
+        "topthink/framework" : "5.1.*",
         "composer/installers": "^1.6",
         "itxq/builder-assets": "dev-master"
     },
