--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
     "require"    : {
         "php"                : ">=7.1.0",
         "ext-json"           : ">=1.2",
-        "topthink/think-view": "^1.0",
-        "composer/installers": "^1.6",
-        "itxq/builder-assets": "dev-master"
+        "topthink/think-view": "^1.0"
+    },
+    "require-dev": {
+        "composer/installers": "^1.6"
     },
     "autoload"   : {
         "psr-4": {
